istio/payment-policy.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-service-policy
spec:
  hosts:
    - payment-service
  gateways:
    - mesh
  http:
    - timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: connect-failure,refused-stream,unavailable,5xx
      route:
        - destination:
            host: payment-service
            port:
              number: 8002
