istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shopping-routes
spec:
  hosts:
    - "*"
  gateways:
    - shopping-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      timeout: 8s
      retries:
        attempts: 2
        perTryTimeout: 3s
        retryOn: connect-failure,refused-stream,unavailable,5xx
      route:
        - destination:
            host: order-service
            port:
              number: 8001
    - match:
        - uri:
            prefix: /products
      route:
        - destination:
            host: product-service
            port:
              number: 8004
    - match:
        - uri:
            prefix: /payments
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: connect-failure,refused-stream,unavailable,5xx
      route:
        - destination:
            host: payment-service
            port:
              number: 8002
    - match:
        - uri:
            prefix: /payment
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: connect-failure,refused-stream,unavailable,5xx
      route:
        - destination:
            host: payment-service
            port:
              number: 8002
    - match:
        - uri:
            prefix: /notifications
      route:
        - destination:
            host: notification-service
            port:
              number: 8003
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
